mobile nav menu overflow problem is fixed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1440,7 +1440,6 @@ main {
     right: 0;
     width: 30rem;
     height: 100vh;
-    overflow: auto;
     background-color: var(--white);
     align-items: initial;
     box-shadow: 0 10px 50px rgba(27, 31, 35, 0.15);
@@ -1461,6 +1460,8 @@ main {
 
   .nav-main-menu {
     flex: initial;
+    max-height: 65%;
+    overflow: auto;
   }
 
   .nav-main-links {
