--- a/assets/scss/mediaQueries.scss
+++ b/assets/scss/mediaQueries.scss
@@ -20,7 +20,6 @@
     right: 0;
     width: 30rem;
     height: 100vh;
-    overflow: auto;
     background-color: var(--white);
     align-items: initial;
     box-shadow: 0 10px 50px rgba(27,31,35,.15);
@@ -39,6 +38,8 @@
   }
   .nav-main-menu{
     flex: initial;
+    max-height: 65%;
+    overflow: auto;
   }
   .nav-main-links{
     flex-direction: column;
